compiler/testData/multiplatform/classScopes/missingConstructor/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/missingConstructor/jvm.kt:1:14: error: 'actual class Foo : Any' has no corresponding members for expected class members:

    expect constructor(s: String): Foo

    The following declaration is incompatible because number of value parameters is different:
        constructor(): Foo

actual class Foo
             ^
